# biathlon-platform

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  main.py  project_structure.txt  pyproject.toml  run_dev.sh  run_prod.sh  run_tests.sh  setup.sh  start.sh
backend/: Dockerfile  Makefile  load_data.py  main.py  pyproject.toml  requirements.txt  test_all_endpoints.py  test_br_api.py  test_real_data.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py  schemas.py
backend/app/api/endpoints/: analytics.py  analytics_czech.py  athletes.py  athletes_csv.py  digital_twin.py  fatigue.py  races.py  test.py  test_api.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: athletes.py
backend/app/core/: config.py  database.py  logging.py  redis.py
backend/app/ml/: model_manager.py
backend/app/ml/preprocessing/: feature_engineering.py
backend/app/ml/training/: train_models.py
backend/app/models/: athlete.py  base.py  prediction.py  sensor_data.py  training_session.py
backend/app/schemas/: athlete.py  base.py  prediction.py  sensor_data.py
backend/app/services/: analytics.py  data_service.py  digital_twin.py  fatigue_analysis.py  ibu_api.py  ibu_full_service.py  ibu_service.py  real_analytics.py  shooting_patterns.py  training_service.py
frontend/: index.html  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.jsx  App.tsx  CzechDashboard.jsx  czech-dashboard.css  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AthleteDetail.jsx  AthleteTimeline.css  AthleteTimeline.jsx  ComparisonView.jsx  Dashboard.css  Dashboard.jsx  HeadToHead.css  HeadToHead.jsx  RaceAnalysis.css  RaceAnalysis.jsx  providers.tsx
frontend/src/components/Analytics/FatigueProfile/: FatigueProfile.css  FatigueProfile.jsx
frontend/src/components/DigitalTwin/: DigitalTwin.css  DigitalTwin.jsx
frontend/src/components/LoadingScreen/: LoadingScreen.css  LoadingScreen.jsx
frontend/src/components/Navigation/: Navigation.css  Navigation.jsx
frontend/src/components/ShootingVisualization/: ShootingVisualization.jsx
frontend/src/components/dashboard/: dashboard.tsx  heart-rate-chart.tsx  realtime-metrics.tsx  shooting-predictor.tsx
frontend/src/components/ui/: index.tsx
frontend/src/hooks/: use-websocket.ts  useVoiceCommands.js
frontend/src/lib/api/: athletes.ts  client.ts  predictions.ts
frontend/src/lib/store/: athlete-store.ts
frontend/src/pages/AICoach/: AICoach.css  AICoach.jsx
frontend/src/pages/Analytic/: Analytic.css  Analytic.jsx
frontend/src/pages/Athletes/: Athletes.css  Athletes.jsx  AthletesWithFatigue.jsx
frontend/src/pages/Dashboard/: Dashboard.css  Dashboard.jsx  DashboardWithFatigue.jsx
frontend/src/pages/Races/: Races.css  Races.jsx
frontend/src/pages/Reports/: Reports.css  Reports.jsx
frontend/src/services/: api.js
frontend/src/styles/: design-system.css  global.css  globals.css  theme.js
frontend/src/utils/: apiTest.js  dataVerification.js
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend
infrastructure/monitoring/: prometheus.yml
src/biathlon_app/: main.py
src/biathlon_app/utils/: config.py
src/components/AICoach/: AICoach.jsx
src/components/HolographicCard/: HolographicCard.jsx
src/pages/AICoach/: AICoach.jsx
src/pages/Analytics/: Analytics.jsx
src/pages/Athletes/: Athletes.jsx
src/pages/Races/: Races.jsx
